--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<main>
 
 		<div id="timer-app">
-			<h5>#BuildForSDGChallenge2020: Time Remaining</h5>
+			<h5 id="h5">#BuildForSDGChallenge2020: Time Remaining</h5>
 
 			<p id="timer"></p>
 			
