--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name ="viewport" content ="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 
-	<title>#BuildForSDGChallenge2020 | Time Remaining</title>
+	<title>#SDGChallenge2020 | Time Remaining</title>
 </head>
 <body>
 	
